--- a/Javascript/11-arrays-and-loops.html
+++ b/Javascript/11-arrays-and-loops.html
@@ -7,7 +7,7 @@
 
 <body>
  <script>
-  const myArray = [10, 20, 30];
+  /*const myArray = [10, 20, 30];
   console.log(myArray);
   
   myArray[0] = 99;
@@ -18,7 +18,48 @@
   myArray.push(100);
   console.log(myArray);
   myArray.splice(0, 1); // 1. index we want to remove 2. Number of values to remove
-  console.log(myArray);
+  console.log(myArray); */
+ 
+  let i = 1; // loop variable
+
+  /*  
+  while (i<=5) {  // (i<=5) -- loop condition  
+    console.log(i);
+    i++; // loop increment
+  }
+
+  for (let i = 1; i<=5; i++){
+    console.log(i);
+  }
+
+  // While vs for loop:
+  // Standard loop -> for loop (it has loop variable, loop condition, and loop increment)
+  // Non-standard loop => while ()
+
+  let randNumber = 0;
+
+  while (randNumber < 0.5){
+    randNumber = Math.random();
+    console.log(randNumber);
+    
+  } */
+
+
+  // Looping thru an Array
+  // 1. Go thru each value of an Array one by one
+  // 2. Do something with each value
+
+  const todolist = [
+    'make dinner',
+    'wash dishes',
+    'watch youtube'
+    ]
+  
+  for (let i = 0; i < todolist.length; i++){
+    const value = todolist[i];
+    console.log(value);
+  }
+
 
 
  </script>
