--- a/Javascript/11-arrays-and-loops.html
+++ b/Javascript/11-arrays-and-loops.html
@@ -60,8 +60,24 @@
     console.log(value);
   }
 
+  const nums = [1,1,3] //accumulate the nums
+
+  let total = 0;
 
 
+  for (let i =0; i<todolist.length; i++){
+    const num = nums[i];
+    total+=num;
+    console.log(total)
+  }
+
+  let numsDoubled =[];
+  for (let i=0;i<nums.length;i++){
+    const num = nums[i];
+    numsDoubled.push(num*2);
+  }
+
+  console.log(numsDoubled);
  </script>
 </body>
 
