--- a/Javascript/11-arrays-and-loops.html
+++ b/Javascript/11-arrays-and-loops.html
@@ -20,7 +20,7 @@
   myArray.splice(0, 1); // 1. index we want to remove 2. Number of values to remove
   console.log(myArray); */
  
-  let i = 1; // loop variable
+  //let i = 1;  loop variable
 
   /*  
   while (i<=5) {  // (i<=5) -- loop condition  
@@ -49,7 +49,7 @@
   // 1. Go thru each value of an Array one by one
   // 2. Do something with each value
 
-  const todolist = [
+  /*const todolist = [
     'make dinner',
     'wash dishes',
     'watch youtube'
@@ -78,6 +78,57 @@
   }
 
   console.log(numsDoubled);
+  */
+
+  // refernce in array
+  const array1 = [1,2,3];
+  let array2 = array1; // copy the reference from array1
+  array2 = array1.slice(); // copy the `value` from array1. Now even though array1 and array2 contains the exact same value, in reality array1 and array2 point to different arrays in computer's memory
+  array2.push(4);
+  console.log(array1);
+  console.log(array2);  
+
+  // destructuring
+  const [firstValue, secondValue] = [1,2,3];
+
+  for (let i =1;i<=10;i++){
+    if (i%3=== 0){
+      continue;
+    }
+    console.log(i)
+    if (i===8){
+      break;
+    }
+  }
+
+  let i =1; 
+
+  while(i<=10){
+    if (i%3==0){
+      i++
+      continue;
+    }
+    console.log(i);
+    i++;
+    
+  }
+
+  function doubleArray(nums){
+    let numsDoubled =[];
+    for (let i=0;i<nums.length;i++){
+      const num = nums[i];
+      if (num===0){
+        return numsDoubled;
+      }
+      numsDoubled.push(num * 2);
+    }
+    return numsDoubled;
+  }
+
+  console.log(doubleArray([1,1,3]));
+  console.log(doubleArray([2,2,5,0,10]))
+
+  
  </script>
 </body>
 
