--- a/Javascript/11-exercise/11x.html
+++ b/Javascript/11-exercise/11x.html
@@ -3,7 +3,7 @@
 <head>
   <title>Todo List</title>
   <style></style>
-  <link rel="stylesheet" href="styles/11-todolist.css">
+  <link rel="stylesheet" href="11x.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
   <div class="js-todo-list todo-grid">text</div>
 
- <script src="script/11-todolist.js">
+ <script src="11x.js">
  </script>
 </body>
 
