First half done

--- a/Javascript/12-rockpaperscissors project.html
+++ b/Javascript/12-rockpaperscissors project.html
@@ -9,12 +9,8 @@
   <body> 
     <p class="title">Rock paper scissors</p>
     <button class="move-button js-rock-button"><img src="img/rock-Emoji.png" class="move-icon"></button>
-    <button onclick="
-    playGame('paper');
-    " class="move-button"><img src="img/paper-Emoji.png" class="move-icon"></button>
-    <button onclick="
-    playGame('scissors');
-    " class="move-button"><img src="img/scissors-Emoji.png" class="move-icon"></button>
+    <button class="move-button js-paper-button"><img src="img/paper-Emoji.png" class="move-icon"></button>
+    <button class="move-button js-scissors-button"><img src="img/scissors-Emoji.png" class="move-icon"></button>
 
     <p class="gameResult result">
     </p>
