--- a/Javascript/12-advanced-function.html
+++ b/Javascript/12-advanced-function.html
@@ -9,7 +9,7 @@
   <button onclick="" class="js-button">Click</button>
 
   <script>
-
+    /*
     const buttonElement = document.querySelector('.js-button');
 
     const eventListner = ()=>{
@@ -23,7 +23,7 @@
     buttonElement.addEventListener('click', ()=>{
       console.log('click2')
     });
-
+    */
     /*
     greeting() // calling the function before declaring -- hoisting 
 
@@ -138,7 +138,20 @@
     }
     */
 
+    /*const newArray = [1,-3,5].filter((value,index)=>{
+      return value>=0
+        })
 
+    console.log(newArray); // result: [1,5];
+    */
+
+    console.log([1,1,3].map((value,index)=>{ // .map() -- Creates a new array[] and add to the array whatever we return 
+      return value*2;
+    }));                                     // result: [2,2,6]
+
+    console.log([1,1,3].map(value=>value*2)); // <-- shortcut of the code right above. Explanation: '()' not needed because only one parameter being passed; '{}' not needed because the block code only take up one line 
+
+    
   </script>
 </body>
 </html>
