--- a/Javascript/12-todolist.html
+++ b/Javascript/12-todolist.html
@@ -12,7 +12,7 @@
   <div class="todo-input-grid">
     <input type="text" placeholder="Todo name" class="input name-input">
     <input type="date" class="date due-date-input">
-    <button class="add-todo-button"onclick="addToDo()">Add</button>
+    <button class="add-todo-button">Add</button>
   </div>
 
   <div class="js-todo-list todo-grid">text</div>
